[tool.poetry]
name = "dyndee"
version = "0.1.0"
description = ""
authors = ["Patrizio Gelosi <patrizio.gelosi@amarulasolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
