[tool.poetry]
name = "dyndesign"
version = "1.1.0"
description = "Toolset for Dynamic Design in Python."
authors = ["Patrizio Gelosi <patrizio.gelosi@amarulasolutions.com>"]
maintainers = ["Patrizio Gelosi <patrizio.gelosi@amarulasolutions.com>"]
repository = "https://github.com/amarula/dyndesign"
license = "MIT"
readme = "README.rst"
keywords = ["design", "dynamic", "decorator", "inheritance"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
